# polythene

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Makefile  README.md  pyproject.toml  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  mutation-testing.yml  release.yml
docs/: developers-guide.md  polythene-design.md  scripting-standards.md  users-guide.md
polythene/: __init__.py  __main__.py  _src_loader.py  backends.py  cmd_utils.py  isolation.py  script_utils.py  session.py
polythene/unittests/: README.md
scripts/: typos_rollout_check.py
src/polythene/: __init__.py  __main__.py  backends.py  cmd_utils.py  script_utils.py
tests/: __init__.py  conftest.py  test_backends.py  test_cmd_utils.py  test_polythene.py  test_script_utils.py  test_session.py  test_workflow_contract.py
tests/bdd/: __init__.py  test_cli_behaviour.py  test_cmd_utils_behaviour.py  test_script_utils_behaviour.py
tests/features/: command_execution.feature  polythene_cli.feature  script_utilities.feature
tests/support/: __init__.py  cli.py
